--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-bigquery</artifactId>
-            <version>2.3.0</version> <!-- Use the latest version -->
+<!--            <version>2.3.0</version> &lt;!&ndash; Use the latest version &ndash;&gt;-->
         </dependency>
         <dependency>
             <groupId>com.google.cloud</groupId>
